Add GitHub link

--- a/index.html
+++ b/index.html
@@ -655,6 +655,9 @@
 
     .footer-right {
       justify-self: end;
+      display: inline-flex;
+      gap: 10px;
+      align-items: center;
     }
 
     .footer-link {
@@ -1009,7 +1012,10 @@
       <div class="footer-row footer-row--legal">
         <span aria-hidden="true"></span>
         <span class="footer-center">© 2026 虎码字根练习　备案号：待填写</span>
-        <span class="footer-right"><a class="footer-link" href="https://www.tiger-code.com/" target="_blank" rel="noopener noreferrer">虎码</a></span>
+        <span class="footer-right">
+          <a class="footer-link" href="https://www.tiger-code.com/" target="_blank" rel="noopener noreferrer">虎码</a>
+          <a class="footer-link" href="https://github.com/Wu-HZ/tiger-code-exercise" target="_blank" rel="noopener noreferrer">GitHub</a>
+        </span>
       </div>
     </footer>
   </div>
